/*
 * $Id: ChangeLog,v 1.1974 2003/12/31 13:37:46 lf_sfnet Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-02-01 12:06 UTC+0100 Giancarlo Niccolai <antispam /at/ niccolai [dot] ws>
  * source/rtl/gtxvt/gtxvt.c
  * source/rtl/gtxvt/gtxvt.h
    ! Fixed visualization of box characters (they were missing some
      corners before.
    + Complete visualization of ALL box characters, including
      partially double and single chars.
      
2003-12-31 14:30 UTC+0100 Lorenzo Fiorini <lorenzo_fiorini/at/tin.it>
  * source/debug/debugger.prg
    * another fix to callstack management
    * still buggy but seems to work in more cases than before

2003-12-31 11:50 UTC+0100 Giancarlo Niccolai <antispam /at/ niccolai [dot] ws>
  * source/rtl/gtxvt/gtxvt.c
    + Added dynamic resizing of the VT while running.
    ! Added Window Manager Hints: this helps window managers to resize correctly
      the console; i.e. the console is now resized at discrete multiples of
      font width/height.

2003-12-31 08:00 UTC+0100 Giancarlo Niccolai <antispam /at/ niccolai [dot] ws>
  * source/rtl/gtxvt/gtxvt.c
  + source/rtl/gtxvt/gtxvt.h
    + Now the virtual buffer of gtxvt is unicode. It's slower, as
      many transformations are required, but is fast enough.
    + Added support for DOS semigraphic characters. Fillers (full
      and partial squares), single and double border boxes are
      now drawn in the terminal INDEPENDENTLY from the underlying
      font (they are drawn "manually" via draw functions).
      (mixed style semigraphic characters are still missing though).


2003-12-30 22:30 UTC-0300 Luiz Rafael Culik Guimaraes <culikr@brturbo.com>
  + contrib\firebird\firebird.c
  + contrib\firebird\tfirebird.prg
  + contrib\firebird\README
  + contrib\firebird\make_b32.bat
  + contrib\firebird\Makefile